--- a/output/assets/css/all-nocdn.css
+++ b/output/assets/css/all-nocdn.css
@@ -7691,6 +7691,10 @@ article.post-micro {
     height: 96px;
 }
 
+.text-justify {
+    text-align: justify;
+}
+
 .glyph-lg {
     font-size: 50px;
 }
